--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/com.mahn42.anhalter42.EasyBoat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit.jar=/Users/andre/craftbukkit_plugins/libs/org/bukkit.jar
+file.reference.bukkit.jar=../libs/org/bukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
